<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_uw_convo_private"
        android:icon="@drawable/ic_visibility_off"
        android:title="@string/menu_uw_convo_private"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_mark_fraud"
        android:icon="@drawable/ic_mark_fraud"
        android:title="mark as fraud"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mark_spam"
        android:icon="@drawable/ic_mark_spam"
        android:title="mark as spam"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mark_check"
        android:icon="@drawable/ic_mark_check"
        android:title="mark as ok"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mark_unkown"
        android:icon="@drawable/ic_mark_unknown"
        android:title="mark as unkown"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mark_fraud_text"
        android:icon="@drawable/ic_mark_fraud"
        android:title="mark as fraud"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_mark_spam_text"
        android:icon="@drawable/ic_mark_spam"
        android:title="mark as spam"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_mark_check_text"
        android:icon="@drawable/ic_mark_check"
        android:title="mark as ok"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_mark_unkown_text"
        android:icon="@drawable/ic_mark_unknown"
        android:title="mark as unkown"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_uw_convo_private_text"
        android:text="toggle private"
        android:title="@string/menu_uw_convo_private"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_call"
        android:title="@string/menu_call"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_notification_settings"
        android:title="@string/menu_notification_settings" />

    <item
        android:id="@+id/menu_details"
        android:title="@string/menu_view_details" />

    <item
        android:id="@+id/menu_delete_conversation"
        android:title="@string/menu_delete" />


</menu>